--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
