--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
+    "@types/lodash": "^4.14.199",
     "@types/mongoose": "^5.11.97",
     "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
@@ -32,6 +33,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.2"
   }
 }
