--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
